--- a/requirements.txt
+++ b/requirements.txt
@@ -31,9 +31,9 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
 Markdown==3.3.4
 matplotlib==3.2.2
-mkl-fft==1.3.0
-mkl-random==1.2.1
-mkl-service==2.3.0
+mkl-fft
+mkl-random
+mkl-service
 mlxtend==0.17.2
 mne==0.23.0
 multidict==5.1.0
